# tichu-bot

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project.freeze  fourmolu.yaml  package.yaml  patch_cabal.py  printed_game_json.txt  stack.yaml  tichu-bot.cabal
.github/workflows/: block-fixup-merge.yml
app/: Main.hs
app/cli/: Cli.hs  CommandLinePlayer.hs  Main.hs
app/gui/: Main.hs
app/wasm/: Cli.hs  CommandLinePlayer.hs  IO.hs  Main.hs
gui/: README.md  game.h  gui.c  jsmn.h  main.c  parser.h  test_json.h
src/: Combinations.hs  Constants.hs  GamePlayer.hs  IO.hs  Lib.hs  Structures.hs  Tichu.hs  Utils.hs
src/Bots/: Random.hs
src/Game/: Combinations.hs  Constants.hs  Interface.hs  Structures.hs  Tichu.hs  Utils.hs
src/Players/: CommandLine.hs  GamePlayer.hs  IO.hs  Random.hs
test/: Combinations.hs  MockGame.hs  Spec.hs  TestCombinations.hs  TestMain.hs  TestTichu.hs  TestUtils.hs
wasm/: .gitignore  README.md  build.sh  index.html  package-lock.json  package.json  setup.sh.patch.txt  tichu-bot-wasm.wasm  tichu-bot.cabal  tichu-bot.js  tichu-wasm.wasm
wasm/app/: Cli.hs  CommandLinePlayer.hs  IO.hs  Jsi.hs  Main.hs  jsimports.c
wasm/c/: stubs.c
