cabal-version: 1.12

name:           tichu-bot
version:        0.1.1.0
build-type:     Simple

library
  exposed-modules:
      Bots.Random
      Game.Combinations
      Game.Constants
      Game.Structures
      Game.Tichu
      Game.Utils
  other-modules:
      Paths_tichu_bot
  hs-source-dirs:
      ../src
  ghc-options:
  c-sources:         c/stubs.c
  include-dirs:      c
  build-depends:
      array >=0.5.4.0 && <1
    , base >=4.7 && <5
    , containers >=0.6.7 && <1
    , random >=1.2.1.1 && <2
    , splitmix >= 0.1.1 && <1
    , mtl >= 2.3.1 && <3
  default-language: Haskell2010

executable tichu-bot-wasm
    main-is:          Main.hs
    other-modules:
        Cli
        CommandLinePlayer
        IO
        Paths_tichu_bot
    build-depends:
        array >=0.5.4.0 && <1
      , base >=4.7 && <5
      , containers >=0.6.7 && <1
      , random >=1.2.1.1 && <2
      , splitmix >= 0.1.1 && <1
      , mtl >= 2.3.1 && <3
      , tichu-bot
    hs-source-dirs:   ../app/wasm
    default-language: Haskell2010
    ghc-options:
