cabal-version: 1.12

name:           tichu-bot
version:        0.1.1.0
build-type:     Simple

library
  exposed-modules:
      Bots.Random
      Game.Combinations
      Game.Constants
      Game.Structures
      Game.Tichu
      Game.Utils
  other-modules:
      Paths_tichu_bot
  hs-source-dirs:
      ../src
  ghc-options:
  build-depends:
      array >=0.5.4.0 && <1
    , base >=4.21 && <5
    , containers >=0.6.7 && <1
    , random >=1.2.1.1 && <2
  default-language: Haskell2010

executable tichu-bot-wasm
    main-is:          Main.hs
    other-modules:
        Jsi
        Paths_tichu_bot
    ghc-options:
    build-depends:
        array >=0.5.4.0 && <1
      , base >=4.21 && <5
      , containers >=0.6.7 && <1
      , random >=1.2.1.1 && <2
      , aeson >= 2.2 && <3
      , bytestring >= 0.12 && < 1
      , scientific >= 0.3 && < 1 
      , vector >= 0.13 && < 1
      , ghc-experimental
      , tichu-bot
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -no-hs-main -optl-mexec-model=reactor -optl-Wl,--export=newGame,--export=updateGame
